2002-07-24  Stefan Jahn  <stefan@lkcc.org>

	* continuations.h: ia64: Include <signal.h> before 
	<sys/ucontext.h>.

2002-07-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* modules.c (scm_sym2var):  Don't compare SCM values with ==.

2002-07-21  Han-Wen  <hanwen@cs.uu.nl>

	* goops.c (scm_compute_applicable_methods): use
	scm_remember_upto_here_1 iso scm_remember_upto_here

	* macros.c: include deprecation.h

	* vectors.c (s_scm_vector_move_right_x): remove side effect in
	macro arg.
	(s_scm_vector_move_left_x): idem.

	* net_db.c, posix.c, socket.c: variable naming: change ans to
	result.

	* sort.c (scm_merge_vector_x): accept vector as argument
	iso. SCM*. This is needed for full GC correctness.

	* gc.h: undo previous undocumented changes related to #ifdef
	GENGC.

2002-07-20  Han-Wen  <hanwen@cs.uu.nl>

	* *.c: add space after commas everywhere.

	* *.c: use SCM_VECTOR_SET everywhere, where a vector is written.
	Document cases where SCM_WRITABLE_VELTS() is used.
	
	* vectors.h (SCM_VELTS): prepare for write barrier, and let
	SCM_VELTS() return a const pointer
	(SCM_VECTOR_SET): add macro.

2002-07-15  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL), macros.c (macro_print, scm_makmacro,
	scm_sym_macro, scm_macro_type), macros.h (scm_makmacro):
	Deprecated the special kind of built-in dynamic syntax transformer
	that was inaccurately named "macro".  Note:  The built-in syntax
	transformers that are named "mmacro" or "memoizing-macro" still
	exist, and it is these which come much closer to what one would
	call a macro.

2002-07-13  Neil Jerram  <neil@ossau.uklinux.net>

	* eval.c (unmemocopy): Fix for
	1001-local-eval-error-backtrace-segfaults (unmemoization crash
	with internal definitions and local-eval).

2002-07-12  Gary Houston  <ghouston@arglist.com>

	* dynl.c: Don't define stub procedures if DYNAMIC_LINKING is not
	defined.  They don't do anything useful, especially since the
	only case where DYNAMIC_LINKING is undefined seems to be